Add core Edge Functions

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -341,3 +341,58 @@ entrypoint = "./functions/hello-inghost/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/hello-inghost/*.html" ]
+
+[functions.update-tone]
+enabled = true
+verify_jwt = true
+import_map = "./functions/update-tone/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/update-tone/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/update-tone/*.html" ]
+
+[functions.classify-email]
+enabled = true
+verify_jwt = true
+import_map = "./functions/classify-email/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/classify-email/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/classify-email/*.html" ]
+
+[functions.generate-draft]
+enabled = true
+verify_jwt = true
+import_map = "./functions/generate-draft/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/generate-draft/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/generate-draft/*.html" ]
+
+[functions.setup-watch]
+enabled = true
+verify_jwt = true
+import_map = "./functions/setup-watch/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/setup-watch/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/setup-watch/*.html" ]
+
+[functions.ingest-email]
+enabled = true
+verify_jwt = false
+import_map = "./functions/ingest-email/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/ingest-email/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/ingest-email/*.html" ]
